<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thermics GSM</string>
    <string name="main_title">Thermics GSM</string>
    <string name="desc"></string>
    <string name="versionName">2.0.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contact_information">Контактная информация</string>
    <string name="title_activity_help_information">Справочная информация</string>
    <string name="title_activity_license_check_thermics">Thermics GSM</string>

    <!-- Главное меню -->
    <string name="messages">Сообщения</string>
    <string name="message">Сообщение</string>
    <string name="config">Управление</string>
    <string name="report">Отчет</string>
    <string name="guardian">Охрана</string>
    <string name="sim1">SIM 1</string>
    <string name="settings">Настройки</string>
    <string name="balance">Баланс</string>
    <string name="company_name">Thermics GSM</string>
    <string name="help">Помощь</string>
    <string name="help_str_1">Компания Thermics занимается продажей отопительного оборудования</string>
    <string name="help_str_2"><u>Узнать больше о компании Thermics</u></string>
    <string name="active_sim">Активная SIM</string>

    <!-- Таймер -->
    <string name="title_activity_timer">Настройка интервалов таймера</string>
    <string name="action_settings">Settings</string>
    <string name="enable_timer">Включить таймер</string>
    <string name="start_work_timer">Начало работы</string>
    <string name="end_work_timer">Окончание работы</string>
    <string name="title_activity_timers_list">TimersListActivity</string>

    <string name="add_timer">Добавить таймер</string>
    <string name="timer_days">Каждый день</string>
    
    <string name="settings_param_regulator">Установка значений регулятора</string>
    <string name="default_value_hotkey">+25\n-10</string>
    <string name="objects">Объекты</string>
    <string name="information">Информация</string>
    
    <string name="title_button">Title button</string>
	<string name="content_description_image">content description</string>
	
	<string name="Text1">Text 1</string>
	<string name="Title1">Title 1</string>
	<string name="value">23</string>
    <string name="timeoutVklRele">Тайм-аут включения реле, сек</string>
</resources>